finished no-sql task